mobile responsive added except transition

--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>SurveySparrow</title>
+
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
+
+
 
   </head>
   <body>
@@ -22,10 +26,29 @@
               <li><a href="">Products</a></li>
             </ul>
           </nav>
+
         </div>
+        <button class="toggle">
+          <a href="#"><i class="fas fa-bars fa-2x"></i></a>
+        </button>
       </div>
 
+
     </header>
+
+    <div class="nav2 hidden">
+      <nav>
+        <ul>
+
+          <li><a href="">Pricing</a></li>
+          <li><a href="">Use Cases</a></li>
+          <li><a href="">Features</a></li>
+          <li><a href="">Products</a></li>
+          <li><a href="">Login</a></li>
+        </ul>
+      </nav>
+
+    </div>
     <div class="mid">
         <div class="mtxt">
           <h1>Where words fail, Musics speaks.</h1>
@@ -35,6 +58,8 @@
         </div>
     </div>
 
+  <script type="text/javascript" src="index.js">
 
+  </script>
   </body>
 </html>
