--- a/index.html
+++ b/index.html
@@ -54,9 +54,62 @@
           <h1>Where words fail, Musics speaks.</h1>
         </div>
         <div class="chatbot">
+          <div class="chatcon hidden">
+            <div class="c-1">
+              <h1>
+                Hi There
+              </h1>
+              <h2>
+                Hello Ask Us Anything. Share Your Feedback.
+              </h2>
 
+            </div>
+            <div class="c-2">
+              <h1>Start a Conversation</h1>
+              <h2>The team usually replies in a few minutes</h2>
+              <button type="button" name="button" class="startcon" >New Conversation<i class="fas fa-paper-plane"></i></button>
+            </div>
+
+          </div>
+          <div class="chatcon2 hidden">
+            <div class="c-1-1">
+              <h1>
+                Hi There
+              </h1>
+              <h2>
+                Hello Ask Us Anything. Share Your Feedback.
+              </h2>
+              </div>
+              <div class="c-1-2">
+                <div class="bubs">
+                  <div class="bubble1 bubble-bottom-left1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, recusandae!</div>
+
+                  <div class="bubcirc">
+
+                  </div>
+                  <div class="bubble bubble-bottom-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, recusandae!</div>
+                  <div class="bubfoot">
+                    <img src="sparrow favicon.png" alt=""><h4>we run on survey sparrow</h4>
+                  </div>
+                </div>
+                <div class="textsub">
+                  <form action="">
+                    <input type="text" name="" value="" class="txtin" placeholder="Write a reply...">
+                    <button type="button" name="button" class="fsub"><i class="fas fa-paper-plane"></i></button>
+                  </form>
+                </div>
+              </div>
+            </div>
+
+
+            <button class="chaton">
+              <img class="trig-on" src="Sparrow Bird.png" alt="">
+            </button>
         </div>
     </div>
+
+
+
 
   <script type="text/javascript" src="index.js">
 
