chat api integrated

--- a/index.html
+++ b/index.html
@@ -77,17 +77,20 @@
                 Hi There
               </h1>
               <h2>
-                Hello Ask Us Anything. Share Your Feedback.
+                The team usually replies in a few minutes
               </h2>
               </div>
               <div class="c-1-2">
                 <div class="bubs">
-                  <div class="bubble1 bubble-bottom-left1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, recusandae!</div>
+                  <div class="bubble1 bubble-bottom-left1 hidden">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, recusandae!</div>
 
-                  <div class="bubcirc">
+                  <div class="response hidden">
+                    <div class="bubcirc">
 
+                    </div>
+                    <div class="bubble bubble-bottom-left ">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, recusandae!</div>
                   </div>
-                  <div class="bubble bubble-bottom-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, recusandae!</div>
+
                   <div class="bubfoot">
                     <img src="sparrow favicon.png" alt=""><h4>we run on survey sparrow</h4>
                   </div>
