--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
               </div>
               <div class="c-1-2">
                 <div class="bubs">
-                  <div class="bubble1 bubble-bottom-left1 hidden">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, recusandae!</div>
+                  <div class="bubble1 bubble-bottom-left1 hidden">Lorem ipsum</div>
 
                   <div class="response hidden">
                     <div class="bubcirc">
 
                     </div>
-                    <div class="bubble bubble-bottom-left ">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, recusandae!</div>
+                    <div class="bubble bubble-bottom-left ">Lorem ipsum</div>
                   </div>
 
                   <div class="bubfoot">
