--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </div>
 
 
-            <button class="chaton">
+            <button class="chaton" name="chat">
               <img class="trig-on" src="Sparrow Bird.png" alt="">
             </button>
         </div>
